load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@npm//:defs.bzl", "npm_link_all_packages")

licenses(["notice"])

exports_files(["LICENSE"])

npm_link_all_packages(name = "node_modules")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//examples/hello_world:hello_world": "",
        "//examples/calculator:bindings": "",
    },
)
