load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@rules_node_binding//node_binding:build_defs.bzl", "node_binding_cc_library", "node_extension")

node_extension(
    name = "bindings",
    srcs = ["bindings.cc"],
    deps = [":calculator_node"],
)

node_binding_cc_library(
    name = "calculator_node",
    srcs = ["calculator_node.cc"],
    hdrs = ["calculator_node.h"],
    deps = [":calculator"],
)

cc_library(
    name = "calculator",
    srcs = ["calculator.cc"],
    hdrs = ["calculator.h"],
)

jest_test(
    name = "calculator_test",
    args = [
        # Needed for Windows.
        # https://github.com/aspect-build/rules_jest/blob/22f68e81c172a694d190122e6caa1938e1bb4bde/e2e/smoke/BUILD.bazel#L22
        "--runTestsByPath",
        "%s/calculator.test.js" % package_name(),
    ],
    data = [
        ":bindings",
        ":calculator.test.js",
    ],
    node_modules = "//examples:node_modules",
)
